# jdlib

./: README.md
Jdlib/: pom.xml
Jdlib/src/main/java/com/emaraic/jdlib/: Jdlib.java
Jdlib/src/main/java/com/emaraic/utils/: FaceDescriptor.java  Image.java  ImageUtils.java
examples/faces_clustering/: FacesClustering.java  Launcher.java  pom.xml
examples/facial_landmarks/: FacialLandmardsExample.java  pom.xml
jni/: CMakeLists.txt  Jdlib.cpp  com_emaraic_jdlib_Jdlib.h  handlers.cpp  handlers.hpp  utils.cpp  utils.hpp
